<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mongxin.livestart</groupId>
    <artifactId>Livestart-all</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>services/admin</module>
        <module>services/distribution</module>
        <module>services/engine</module>
        <module>common/framework</module>
        <module>apis/gateway</module>
        <module>services/merchant-admin</module>
        <module>services/search</module>
        <module>services/settlement</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <dozer-core.version>6.5.2</dozer-core.version>
        <fastjson2.version>2.0.36</fastjson2.version>
        <guava.version>30.0-jre</guava.version>

        <hutool-all.version>5.8.40</hutool-all.version>
        <redisson.version>3.27.2</redisson.version>
        <easyexcel.version>3.1.3</easyexcel.version>
        <shardingsphere.version>5.3.2</shardingsphere.version>
        <spring-boot.version>3.0.7</spring-boot.version>
        <spring-cloud-alibaba.version>2022.0.0.0-RC2</spring-cloud-alibaba.version>
        <spring-cloud.version>2022.0.3</spring-cloud.version>
        <jsoup.version>1.15.3</jsoup.version>

        <java.version>17</java.version>
        <jjwt.version>0.9.1</jjwt.version>
        <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
        <mybatis-spring-boot-starter.version>3.0.2</mybatis-spring-boot-starter.version>
        <minio.version>8.5.10</minio.version>
        <okhttp.version>4.12.0</okhttp.version>
    </properties>

    <dependencies>
        <dependency>
            <artifactId>lombok</artifactId>
            <groupId>org.projectlombok</groupId>
            <version>1.18.36</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.9.22.1</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <artifactId>spring-boot-dependencies</artifactId>
                <groupId>org.springframework.boot</groupId>
                <scope>import</scope>
                <type>pom</type>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <artifactId>spring-cloud-dependencies</artifactId>
                <groupId>org.springframework.cloud</groupId>
                <scope>import</scope>
                <type>pom</type>
                <version>${spring-cloud.version}</version>
            </dependency>

            <dependency>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <groupId>com.alibaba.cloud</groupId>
                <scope>import</scope>
                <type>pom</type>
                <version>${spring-cloud-alibaba.version}</version>
            </dependency>

            <dependency>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <groupId>com.baomidou</groupId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <dependency>
                <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
                <groupId>org.apache.shardingsphere</groupId>
                <version>${shardingsphere.version}</version>
            </dependency>

            <dependency>
                <artifactId>jjwt</artifactId>
                <groupId>io.jsonwebtoken</groupId>
                <version>${jjwt.version}</version>
            </dependency>

            <dependency>
                <artifactId>fastjson2</artifactId>
                <groupId>com.alibaba.fastjson2</groupId>
                <version>${fastjson2.version}</version>
            </dependency>

            <dependency>
                <artifactId>dozer-core</artifactId>
                <groupId>com.github.dozermapper</groupId>
                <version>${dozer-core.version}</version>
            </dependency>

            <dependency>
                <artifactId>hutool-all</artifactId>
                <groupId>cn.hutool</groupId>
                <version>${hutool-all.version}</version>
            </dependency>

            <dependency>
                <artifactId>redisson-spring-boot-starter</artifactId>
                <groupId>org.redisson</groupId>
                <version>${redisson.version}</version>
            </dependency>

            <dependency>
                <artifactId>guava</artifactId>
                <groupId>com.google.guava</groupId>
                <version>${guava.version}</version>
            </dependency>

            <dependency>
                <artifactId>nacos-client</artifactId>
                <groupId>com.alibaba.nacos</groupId>
                <version>2.2.4</version>
            </dependency>

            <dependency>
                <groupId>com.aliyun.oss</groupId>
                <artifactId>aliyun-sdk-oss</artifactId>
                <version>3.18.5</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>